[package]
name = "ras_service"
version = "0.1.0"
edition = "2021"
description = "Simple library for build (non-full) REST microservice"
license = "MIT"


[dependencies]
tokio= {version = "1.17.0", features = ["full"]}
httparse="1.6.0"
serde = {version = "1.0.0", features = ["derive"]}
serde_json = "1.0.0"
urldecode="0.1.0"
reqwest = { version = "0.11.0", features = ["blocking"] }
